--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.inputBox {
+  width: 30vw;
+  margin: auto;
+  border: 2px solid black;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 10%;
+  transform: translateY(-50%);
 }
 
-.App-link {
-  color: #61dafb;
+.inputBoxInputDiv {
+  width: 80%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputBoxTextInput {
+  width: 100%;
+  z-index: 100;
+  background-color: white;
+  position: relative;
+}
+
+.hideAlert {
+  transform: translateY(-100%);
+}
+
+.inputAlert {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  color: red;
+  z-index: -1;
+  pointer-events: none;
+  transition: 0.1s;
+  position: relative;
+}
+
+.passwordInputAlert {
+  display: flex;
+  height: 50%;
+  margin: 0;
+  padding: 0;
+  color: red;
+  z-index: 3;
+  pointer-events: none;
+  justify-content: space-between;
+  transition: 0.1s;
+  position: relative;
+}
+
+#passwordStrengthBar {
+  width: 80%;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  border: 2px solid black;
+  border-radius: 16px;
+}
+
+#innerPasswordBar {
+  height: 100%;
+  transition: 0.2s;
+  border-radius: 16px;
+}
+
+.weak {
+  width: 20%;
+  background-color: red;
+}
+
+.strong {
+  width: 100%;
+  background-color: lime;
+}
+
+.average {
+  width: 60%;
+  background-color: orange;
 }
